book and media report content update Sun 10/24/2021

--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 10/23/2021 06:00<br>
+Reserved books sorted by folder - 10/24/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 137 books - 1715H 32M / 71D 11H 32M<br>
@@ -211,8 +211,8 @@ Total Comic Trades : 1<br>
 Star Wars The High Republic Edge of Balance, Vol. 1 - 4H 28M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 117 books - 737H 27M / 30D 17H 27M<br>
-Total Comic Trades : 117<br>
+Book Reserve - Comic Trades : 118 books - 742H 10M / 30D 22H 10M<br>
+Total Comic Trades : 118<br>
  <br>
 Absolute Carnage - 6H 13M<br>
 Action Comics 1000 - 4H 58M<br>
@@ -244,6 +244,7 @@ Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
 Carnage vol 2 World Tour - 3H 29M<br>
 Civil War II - 9H 12M<br>
 Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
+Daredevil by Waid Rivera Vol. 1 - 4H 43M<br>
 Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
 Darth Vader vol 3 - 3H 59M<br>
 Darth Vader vol 4 - 5H 13M<br>
@@ -879,7 +880,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
+Book Reserve - Comic Trades - 118 books - 742H 10M / 30D 22H 10M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 498 books - 6607H 13M / 275D 7H 13M<br>
  <br>
@@ -889,20 +890,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 168 queued items: 2199H 20M / 91D 15H 20M<br>
 0 reserve titles are marked as high priority<br>
-20.41% of reserve items are queued<br>
+20.39% of reserve items are queued<br>
  <br>
-All books included in this report: 1231 titles - 14581H 44M / 607D 13H 44M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1232 titles - 14586H 27M / 607D 18H 27M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
-Total remaining in queue and reserve: 823 titles - 10095H 48M / 420D 15H 48M<br>
-Average completed per year: 46.3 titles - 509H 19M / 21D 5H 19M<br>
+Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
+Average completed per year: 46.3 titles - 509H 9M / 21D 5H 9M<br>
 Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 8.9<br>
+Remaining years of reserve material at current year pace: 9.0<br>
  <br>
-Total time to process all reports: 00:00:01.652 (1.652 seconds)<br>
-Total time including file writes: 00:00:01.653 (1.653 seconds)
+Total time to process all reports: 00:00:01.556 (1.556 seconds)<br>
+Total time including file writes: 00:00:01.557 (1.557 seconds)
 </div>
 </body>
 </html>
