--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 10/26/2021 06:00<br>
+All books sorted by name - 10/27/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 1232 books<br>
@@ -421,7 +421,7 @@ Foundation 6 - Prelude to Foundation - 14H 59M (Book Reserve - Audiobooks)<br>
 Foundation 7 - Forward the Foundation - 16H 14M (Book Reserve - Audiobooks)<br>
 Four Hundred Souls - Ibram X. Kendi - 14H 6M (Book Reserve - Audiobooks)<br>
 Fragile Things - Neil Gaiman - 10H 49M (Completed in 2018)<br>
-Frankenstein, or The Modern Prometheus - Mary Shelley - 8H 23M (Book Reserve - Audiobooks)<br>
+Frankenstein, or The Modern Prometheus - Mary Shelley - 8H 23M (Queue - Current Audiobooks)<br>
 Freakonomics - Steven D. Levitt - 6H 27M (Completed in 2020)<br>
 From a Buick 8 - Stephen King - 13H 28M (Book Reserve - Audiobooks)<br>
 Future State Wonder Woman - 6H 13M (Book Reserve - Comic Trades)<br>
@@ -1107,9 +1107,9 @@ The War on Normal People - Andrew Yang - 6H 56M (Book Reserve - Audiobooks)<br>
 The Weatherman Volume 1 - 6H 13M (Book Reserve - Comic Trades)<br>
 The Wheel of Time 00 - New Spring - 12H 41M (Book Reserve - Audiobooks)<br>
 The Wheel of Time 01 - The Eye of the World - 29H 59M (Completed in 2021)<br>
-The Wheel of Time 02 - The Great Hunt - 26H 35M (Book Reserve - Audiobooks)<br>
-The Wheel of Time 03 - The Dragon Reborn - 24H 48M (Book Reserve - Audiobooks)<br>
-The Wheel of Time 04 - The Shadow Rising - 41H 25M (Book Reserve - Audiobooks)<br>
+The Wheel of Time 02 - The Great Hunt - 26H 35M (Queue - Current Audiobooks)<br>
+The Wheel of Time 03 - The Dragon Reborn - 24H 48M (Queue - Current Audiobooks)<br>
+The Wheel of Time 04 - The Shadow Rising - 41H 25M (Queue - Current Audiobooks)<br>
 The Wheel of Time 05 - The Fires of Heaven - 36H 29M (Book Reserve - Audiobooks)<br>
 The Wheel of Time 06 - Lord of Chaos - 41H 43M (Book Reserve - Audiobooks)<br>
 The Wheel of Time 07 - A Crown of Swords - 30H 34M (Book Reserve - Audiobooks)<br>
@@ -1249,7 +1249,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 137 books - 1715H 32M / 71D 11H 32M<br>
+Queue - Current Audiobooks - 141 books - 1816H 44M / 75D 16H 44M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 75 books - 708H 7M / 29D 12H 7M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -1264,15 +1264,15 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 118 books - 742H 10M / 30D 22H 10M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 498 books - 6607H 13M / 275D 7H 13M<br>
+Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-168 queued items: 2199H 20M / 91D 15H 20M<br>
+172 queued items: 2300H 32M / 95D 20H 32M<br>
 0 reserve titles are marked as high priority<br>
-20.39% of reserve items are queued<br>
+20.87% of reserve items are queued<br>
  <br>
 All books included in this report: 1232 titles - 14586H 27M / 607D 18H 27M<br>
 Records not found in the lookup file: 0<br>
@@ -1280,12 +1280,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
 Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
-Average completed per year: 46.3 titles - 508H 50M / 21D 4H 50M<br>
+Average completed per year: 46.3 titles - 508H 41M / 21D 4H 41M<br>
 Remaining years of reserve material at average yearly pace: 17.8<br>
 Remaining years of reserve material at current year pace: 9.1<br>
  <br>
-Total time to process all reports: 00:00:07.485 (7.485 seconds)<br>
-Total time including file writes: 00:00:07.485 (7.485 seconds)
+Total time to process all reports: 00:00:01.569 (1.569 seconds)<br>
+Total time including file writes: 00:00:01.569 (1.569 seconds)
 </div>
 </body>
 </html>
