--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 10/26/2021 06:00<br>
+Reserved books sorted by length - 10/27/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 824 books<br>
@@ -226,7 +226,7 @@ No-Drama Discipline - Daniel J. Siegel - 8H 21M (Queue - Current Audiobooks)<br>
 The Pleasure of Finding Things Out - Richard P. Feynman - 8H 23M (Queue - Audible Audiobooks)<br>
 Skin in the Game - Nassim Nicholas Taleb - 8H 23M (Queue - Current Audiobooks)<br>
 Gateway - Frederik Pohl - 8H 23M (Book Reserve - Audiobooks (Need new source))<br>
-Frankenstein, or The Modern Prometheus - Mary Shelley - 8H 23M (Book Reserve - Audiobooks)<br>
+Frankenstein, or The Modern Prometheus - Mary Shelley - 8H 23M (Queue - Current Audiobooks)<br>
 Cultish - The Language of Fanaticism - Amanda Montell - 8H 24M (Queue - Current Audiobooks)<br>
 Artemis Fowl 5 - The Lost Colony - 8H 25M (Book Reserve - Audiobooks)<br>
 Pern 3-02 - Dragon's Kin - 8H 26M (Book Reserve - Audiobooks)<br>
@@ -682,7 +682,7 @@ Lightbringer 2 - The Blinding Knife - Brent Weeks - 24H 21M (Book Reserve - Audi
 The Wheel of Time 09 - Winter's Heart - 24H 21M (Book Reserve - Audiobooks)<br>
 The Age of Surveillance Capitalism - Shoshana Zuboff - 24H 23M (Book Reserve - Audiobooks)<br>
 Lucifer's Hammer - Niven & Pournell - 24H 40M (Book Reserve - Audiobooks (Need new source))<br>
-The Wheel of Time 03 - The Dragon Reborn - 24H 48M (Book Reserve - Audiobooks)<br>
+The Wheel of Time 03 - The Dragon Reborn - 24H 48M (Queue - Current Audiobooks)<br>
 Time Enough For Love - Robert A Heinlein - 24H 55M (Book Reserve - Audiobooks)<br>
 Insomnia - Stephen King - 24H 57M (Book Reserve - Audiobooks)<br>
 East of Eden - John Steinbeck - 25H 35M (Book Reserve - Audiobooks)<br>
@@ -697,7 +697,7 @@ Hand of Thrawn Duology 2 - Vision of the Future - 26H 23M (Book Reserve - Audiob
 American Carnage - Tim Alberta - 26H 30M (Book Reserve - Audiobooks)<br>
 Fire & Blood - George R. R. Martin - 26H 31M (Queue - Current Audiobooks)<br>
 Behave - The Biology of Humans at Our Best and Worst - Robert M. Sapolsky - 26H 34M (Queue - Current Audiobooks)<br>
-The Wheel of Time 02 - The Great Hunt - 26H 35M (Book Reserve - Audiobooks)<br>
+The Wheel of Time 02 - The Great Hunt - 26H 35M (Queue - Current Audiobooks)<br>
 Mars trilogy 2 - Green Mars - Kim Stanley Robinson - 26H 41M (Book Reserve - Audiobooks)<br>
 Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Reserve - Audiobooks)<br>
 Crobuzon 2 - The Scar - China Mieville - 27H 6M (Queue - Current Audiobooks)<br>
@@ -733,7 +733,7 @@ Commonwealth Saga 1 - Pandora's Star - Peter F. Hamilton - 37H 26M (Book Reserve
 Gravity's Rainbow - Thomas Pynchon - 37H 32M (Book Reserve - Audiobooks)<br>
 The Wheel of Time 13 - Towers of Midnight - 38H 32M (Book Reserve - Audiobooks)<br>
 Pillars of the Earth 1 - The Pillars of the Earth - Ken Follett - 41H 8M (Queue - Current Audiobooks)<br>
-The Wheel of Time 04 - The Shadow Rising - 41H 25M (Book Reserve - Audiobooks)<br>
+The Wheel of Time 04 - The Shadow Rising - 41H 25M (Queue - Current Audiobooks)<br>
 The Wheel of Time 06 - Lord of Chaos - 41H 43M (Book Reserve - Audiobooks)<br>
 The Reality Dysfunction - Peter F Hamilton - 41H 49M (Book Reserve - Audiobooks (Need new source))<br>
 The Wheel of Time 14 - A Memory of Light - 41H 59M (Book Reserve - Audiobooks)<br>
@@ -747,7 +747,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 137 books - 1715H 32M / 71D 11H 32M<br>
+Queue - Current Audiobooks - 141 books - 1816H 44M / 75D 16H 44M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 75 books - 708H 7M / 29D 12H 7M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -762,15 +762,15 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 118 books - 742H 10M / 30D 22H 10M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 498 books - 6607H 13M / 275D 7H 13M<br>
+Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-168 queued items: 2199H 20M / 91D 15H 20M<br>
+172 queued items: 2300H 32M / 95D 20H 32M<br>
 0 reserve titles are marked as high priority<br>
-20.39% of reserve items are queued<br>
+20.87% of reserve items are queued<br>
  <br>
 All books included in this report: 1232 titles - 14586H 27M / 607D 18H 27M<br>
 Records not found in the lookup file: 0<br>
@@ -778,12 +778,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
 Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
-Average completed per year: 46.3 titles - 508H 50M / 21D 4H 50M<br>
+Average completed per year: 46.3 titles - 508H 41M / 21D 4H 41M<br>
 Remaining years of reserve material at average yearly pace: 17.8<br>
 Remaining years of reserve material at current year pace: 9.1<br>
  <br>
-Total time to process all reports: 00:00:07.485 (7.485 seconds)<br>
-Total time including file writes: 00:00:07.485 (7.485 seconds)
+Total time to process all reports: 00:00:01.569 (1.569 seconds)<br>
+Total time including file writes: 00:00:01.569 (1.569 seconds)
 </div>
 </body>
 </html>
