--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 10/28/2021 06:00<br>
+Completed books sorted by folder - 10/29/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 75 books - 708H 7M / 29D 12H 7M<br>
 Total Comic Trades : 30<br>
 Average book length : 9H 26M<br>
-Hours read per week : 16H 28M<br>
-On pace to complete 91 books (859H 15M / 35D 19H 15M) by the end of 2021<br>
+Hours read per week : 16H 24M<br>
+On pace to complete 90 books (856H 24M / 35D 16H 24M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -509,12 +509,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
 Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
-Average completed per year: 46.3 titles - 508H 31M / 21D 4H 31M<br>
+Average completed per year: 46.2 titles - 508H 22M / 21D 4H 22M<br>
 Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.1<br>
+Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:02.823 (2.823 seconds)<br>
-Total time including file writes: 00:00:02.823 (2.823 seconds)
+Total time to process all reports: 00:00:01.619 (1.619 seconds)<br>
+Total time including file writes: 00:00:01..62 (1.62 seconds)
 </div>
 </body>
 </html>
