book and media report content update Sat 10/30/2021

--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 10/29/2021 06:00<br>
+Reserved books sorted by name - 10/30/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 824 books<br>
@@ -872,12 +872,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
 Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
-Average completed per year: 46.2 titles - 508H 22M / 21D 4H 22M<br>
+Average completed per year: 46.2 titles - 508H 12M / 21D 4H 12M<br>
 Remaining years of reserve material at average yearly pace: 17.8<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.619 (1.619 seconds)<br>
-Total time including file writes: 00:00:01..62 (1.62 seconds)
+Total time to process all reports: 00:00:01.654 (1.654 seconds)<br>
+Total time including file writes: 00:00:01.654 (1.654 seconds)
 </div>
 </body>
 </html>
