--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 10/31/2021 06:00<br>
+Reserved books sorted by length - 11/01/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 824 books<br>
@@ -778,12 +778,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
 Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
-Average completed per year: 46.2 titles - 508H 3M / 21D 4H 3M<br>
+Average completed per year: 46.2 titles - 507H 53M / 21D 3H 53M<br>
 Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.2<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01.654 (1.654 seconds)<br>
-Total time including file writes: 00:00:01.655 (1.655 seconds)
+Total time to process all reports: 00:00:01..68 (1.68 seconds)<br>
+Total time including file writes: 00:00:01.681 (1.681 seconds)
 </div>
 </body>
 </html>
