--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/01/2021 06:00<br>
+Completed books sorted by folder - 11/02/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 75 books - 708H 7M / 29D 12H 7M<br>
 Total Comic Trades : 30<br>
 Average book length : 9H 26M<br>
-Hours read per week : 16H 15M<br>
-On pace to complete 89 books (847H 59M / 35D 7H 59M) by the end of 2021<br>
+Hours read per week : 16H 11M<br>
+On pace to complete 89 books (845H 8M / 35D 5H 8M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -509,12 +509,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
 Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
-Average completed per year: 46.2 titles - 507H 53M / 21D 3H 53M<br>
+Average completed per year: 46.2 titles - 507H 44M / 21D 3H 44M<br>
 Remaining years of reserve material at average yearly pace: 17.8<br>
 Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01..68 (1.68 seconds)<br>
-Total time including file writes: 00:00:01.681 (1.681 seconds)
+Total time to process all reports: 00:00:01.706 (1.706 seconds)<br>
+Total time including file writes: 00:00:01.707 (1.707 seconds)
 </div>
 </body>
 </html>
