--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -9,13 +9,17 @@
 <div class="content">
 Progress bars collected from from brandonsanderson.com on 2021-11-03<br>
 <br>
-Cytonic Final Proofread 100%<br>
+<label for="952c6d48-215d-4bb3-ac61-8087a1ab105e">Cytonic Final Proofread 100%</label>
+<progress id="952c6d48-215d-4bb3-ac61-8087a1ab105e" max="100" value="100"> 100% </progress><br>
 <br>
-Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 100%<br>
+<label for="a0f0af1a-914b-4df0-857b-0b7c61684034">Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 100%</label>
+<progress id="a0f0af1a-914b-4df0-857b-0b7c61684034" max="100" value="100"> 100% </progress><br>
 <br>
-Skyward Four Pre Writing 100%<br>
+<label for="0289702e-a578-4ac1-aec0-e55f671e8eb9">Skyward Four Pre Writing 100%</label>
+<progress id="0289702e-a578-4ac1-aec0-e55f671e8eb9" max="100" value="100"> 100% </progress><br>
 <br>
-Evershore (Skyward Novella 3) Final Draft 100%<br>
+<label for="69a9a176-1c8e-414d-ae29-cc114759af99">Evershore (Skyward Novella 3) Final Draft 100%</label>
+<progress id="69a9a176-1c8e-414d-ae29-cc114759af99" max="100" value="100"> 100% </progress><br>
 <br>
 </div>
 </body>
