book and media report content update Wed 11/03/2021

--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -9,17 +9,17 @@
 <div class="content">
 Progress bars collected from from brandonsanderson.com on 2021-11-03<br>
 <br>
-<label for="4c34e8fa-0735-4f80-b0d1-e1751c326c37">Cytonic Final Proofread 100%</label>
-<progress id="4c34e8fa-0735-4f80-b0d1-e1751c326c37" max="100" value="100"> 100% </progress><br>
+<label for="4310922f-da83-494e-b603-4ab4d0301913">Cytonic Final Proofread 100%</label>
+<br><progress id="4310922f-da83-494e-b603-4ab4d0301913" max="100" value="100"> 100% </progress><br>
 <br>
-<label for="6e06c041-1dc0-475e-9aee-c668562ffb80">Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 100%</label>
-<progress id="6e06c041-1dc0-475e-9aee-c668562ffb80" max="100" value="100"> 100% </progress><br>
+<label for="046254e9-d668-4355-9c8e-b55f2f076ec9">Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 100%</label>
+<br><progress id="046254e9-d668-4355-9c8e-b55f2f076ec9" max="100" value="100"> 100% </progress><br>
 <br>
-<label for="f2b7018c-6e82-4b9d-9b4b-9ba00639a6ab">Skyward Four Pre Writing 100%</label>
-<progress id="f2b7018c-6e82-4b9d-9b4b-9ba00639a6ab" max="100" value="100"> 100% </progress><br>
+<label for="9a53286e-b428-4c2e-a098-8f5345e527bb">Skyward Four Pre Writing 100%</label>
+<br><progress id="9a53286e-b428-4c2e-a098-8f5345e527bb" max="100" value="100"> 100% </progress><br>
 <br>
-<label for="89da6434-d7fb-47b1-8217-6783d7026f0a">Evershore (Skyward Novella 3) Final Draft 100%</label>
-<progress id="89da6434-d7fb-47b1-8217-6783d7026f0a" max="100" value="100"> 100% </progress><br>
+<label for="3342e7fd-70b4-4160-baec-24ca73833304">Evershore (Skyward Novella 3) Final Draft 100%</label>
+<br><progress id="3342e7fd-70b4-4160-baec-24ca73833304" max="100" value="100"> 100% </progress><br>
 <br>
 </div>
 </body>
