book and media report content update Mon 11/08/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -82,6 +82,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1473396980l/2612._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1622406464l/56304131._SX318_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1337818095l/228665.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1391813567l/15751404.jpg" width="300" >
 </div>
 </body>
 </html>
