--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 11/08/2021 06:00<br>
+All books sorted by name - 11/08/2021 08:50<br>
 -----------------------------------------------------<br>
  <br>
 1232 books<br>
@@ -244,7 +244,7 @@ Darth Plagueis (Star Wars) - 14H 49M (Book Reserve - Audiobooks)<br>
 Darth Vader vol 3 - 3H 59M (Book Reserve - Comic Trades)<br>
 Darth Vader vol 4 - 5H 13M (Book Reserve - Comic Trades)<br>
 Darwin's Radio - Greg Bear - 5H 19M (Completed in 2015)<br>
-David and Goliath - Malcolm Gladwell - 7H 2M (Queue - Current Audiobooks)<br>
+David and Goliath - Malcolm Gladwell - 7H 2M (Completed in 2021)<br>
 Dawnshard - Brandon Sanderson - 6H 28M (Completed in 2021)<br>
 Dead Astronauts - Jeff VanderMeer - 7H 47M (Book Reserve - Audiobooks)<br>
 Deadpool Classic Killogy - 8H 43M (Book Reserve - Comic Trades)<br>
@@ -1249,9 +1249,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 141 books - 1816H 44M / 75D 16H 44M<br>
+Queue - Current Audiobooks - 140 books - 1809H 42M / 75D 9H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 75 books - 708H 7M / 29D 12H 7M<br>
+Completed in 2021 - 76 books - 715H 9M / 29D 19H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -1270,22 +1270,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-172 queued items: 2300H 32M / 95D 20H 32M<br>
+171 queued items: 2293H 30M / 95D 13H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.87% of reserve items are queued<br>
+20.78% of reserve items are queued<br>
  <br>
 All books included in this report: 1232 titles - 14586H 27M / 607D 18H 27M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
-Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
-Average completed per year: 46.1 titles - 506H 47M / 21D 2H 47M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 409 titles - 4492H 57M / 187D 4H 57M<br>
+Total remaining in queue and reserve: 823 titles - 10093H 29M / 420D 13H 29M<br>
+Average completed per year: 46.2 titles - 507H 35M / 21D 3H 35M<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01.693 (1.693 seconds)<br>
-Total time including file writes: 00:00:01.693 (1.693 seconds)
+Total time to process all reports: 00:00:03.328 (3.328 seconds)<br>
+Total time including file writes: 00:00:03.328 (3.328 seconds)
 </div>
 </body>
 </html>
