--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/08/2021 06:00<br>
+Completed books sorted by folder - 11/08/2021 08:50<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 75 books - 708H 7M / 29D 12H 7M<br>
+Completed in 2021 : 76 books - 715H 9M / 29D 19H 9M<br>
 Total Comic Trades : 30<br>
-Average book length : 9H 26M<br>
-Hours read per week : 15H 53M<br>
-On pace to complete 87 books (828H 54M / 34D 12H 54M) by the end of 2021<br>
+Average book length : 9H 24M<br>
+Hours read per week : 16H 2M<br>
+On pace to complete 88 books (837H 7M / 34D 21H 7M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -35,6 +35,7 @@ Broken Earth 2 - The Obelisk Gate - N. K. Jemisin - 13H 23M<br>
 Capital and Ideology - Thomas Piketty - 49H 10M<br>
 Cosmic Ghost Rider vol 1 - 3H 29M<br>
 Culture 03 - Use of Weapons - Iain M. Banks - 13H 33M<br>
+David and Goliath - Malcolm Gladwell - 7H 2M<br>
 Dawnshard - Brandon Sanderson - 6H 28M<br>
 Deadpool, Vol. 1 Secret Invasion - 4H 14M<br>
 Discworld 17 - Intreresting Times - 10H 3M<br>
@@ -478,9 +479,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 141 books - 1816H 44M / 75D 16H 44M<br>
+Queue - Current Audiobooks - 140 books - 1809H 42M / 75D 9H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 75 books - 708H 7M / 29D 12H 7M<br>
+Completed in 2021 - 76 books - 715H 9M / 29D 19H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -499,22 +500,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-172 queued items: 2300H 32M / 95D 20H 32M<br>
+171 queued items: 2293H 30M / 95D 13H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.87% of reserve items are queued<br>
+20.78% of reserve items are queued<br>
  <br>
 All books included in this report: 1232 titles - 14586H 27M / 607D 18H 27M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
-Total remaining in queue and reserve: 824 titles - 10100H 31M / 420D 20H 31M<br>
-Average completed per year: 46.1 titles - 506H 47M / 21D 2H 47M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 409 titles - 4492H 57M / 187D 4H 57M<br>
+Total remaining in queue and reserve: 823 titles - 10093H 29M / 420D 13H 29M<br>
+Average completed per year: 46.2 titles - 507H 35M / 21D 3H 35M<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01.693 (1.693 seconds)<br>
-Total time including file writes: 00:00:01.693 (1.693 seconds)
+Total time to process all reports: 00:00:03.328 (3.328 seconds)<br>
+Total time including file writes: 00:00:03.328 (3.328 seconds)
 </div>
 </body>
 </html>
