--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 <div class="content">
-Progress bars collected from from brandonsanderson.com on 2021-11-12<br>
+Progress bars collected from from brandonsanderson.com on 2021-11-13<br>
 <br>
-<label for="4a02398c-3ef2-4a4a-9cba-4dfc4f232019">Cytonic Final Proofread 100%</label>
-<br><progress id="4a02398c-3ef2-4a4a-9cba-4dfc4f232019" max="100" value="100"> 100% </progress><br>
+<label for="5b720b27-0039-4fda-bef4-41a9f63c09ea">Cytonic Final Proofread 100%</label>
+<br><progress id="5b720b27-0039-4fda-bef4-41a9f63c09ea" max="100" value="100"> 100% </progress><br>
 <br>
-<label for="db74fb7f-db81-4f01-8e15-e0abdac0782f">Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 100%</label>
-<br><progress id="db74fb7f-db81-4f01-8e15-e0abdac0782f" max="100" value="100"> 100% </progress><br>
+<label for="f97c4b83-ec2a-4247-84cd-1ad0f19349a9">Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 100%</label>
+<br><progress id="f97c4b83-ec2a-4247-84cd-1ad0f19349a9" max="100" value="100"> 100% </progress><br>
 <br>
-<label for="3e97bb79-a42a-4e5a-9c28-ffaa1b9eb4ce">Skyward Four Pre Writing 100%</label>
-<br><progress id="3e97bb79-a42a-4e5a-9c28-ffaa1b9eb4ce" max="100" value="100"> 100% </progress><br>
+<label for="563b73e6-f838-4ce0-8ab6-6909152f6d32">Skyward Four Draft 1.0 30%</label>
+<br><progress id="563b73e6-f838-4ce0-8ab6-6909152f6d32" max="100" value="30"> 30% </progress><br>
 <br>
-<label for="4a24cad8-f5bf-4ef1-bef7-ea8e7d7ab4c5">Evershore (Skyward Novella 3) Final Draft 100%</label>
-<br><progress id="4a24cad8-f5bf-4ef1-bef7-ea8e7d7ab4c5" max="100" value="100"> 100% </progress><br>
+<label for="84254dd7-f7aa-433f-bc61-42adb02d27b6">Evershore (Skyward Novella 3) Final Draft 100%</label>
+<br><progress id="84254dd7-f7aa-433f-bc61-42adb02d27b6" max="100" value="100"> 100% </progress><br>
 <br>
 </div>
 </body>
