--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -85,6 +85,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1391813567l/15751404.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1577550853l/45032059._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1568465124l/43618654.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1309552288l/91475.jpg" width="300" >
 </div>
 </body>
 </html>
