--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/12/2021 06:00<br>
+Completed books sorted by folder - 11/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 78 books - 727H 1M / 30D 7H 1M<br>
+Completed in 2021 : 79 books - 741H 20M / 30D 21H 20M<br>
 Total Comic Trades : 31<br>
-Average book length : 9H 19M<br>
-Hours read per week : 16H 6M<br>
-On pace to complete 90 books (840H 16M / 35D 0H 16M) by the end of 2021<br>
+Average book length : 9H 23M<br>
+Hours read per week : 16H 22M<br>
+On pace to complete 91 books (854H 4M / 35D 14H 4M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -82,6 +82,7 @@ The 7 Habits of Highly Effective People - Stephen R. Covey - 13H 8M<br>
 The Batman Who Laughs - 7H 13M<br>
 The Chronicles of Amber 06 - Trumps of Doom - 5H 51M<br>
 The Dresden Files 08 - Proven Guilty - Jim Butcher - 16H 21M<br>
+The Dresden Files 09 - White Night - Jim Butcher - 14H 18M<br>
 The Family Firm - A Data-Driven Guide to Better Decision Making in the Early School Years - Emily Oster - 7H 58M<br>
 The Power of Showing Up - Daniel J. Siegel - 7H 29M<br>
 The Righteous Mind - Why Good People Are Divided by Politics and Religion - Jonathan Haidt - 11H 4M<br>
@@ -481,9 +482,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 139 books - 1804H 3M / 75D 4H 3M<br>
+Queue - Current Audiobooks - 138 books - 1789H 44M / 74D 13H 44M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 78 books - 727H 1M / 30D 7H 1M<br>
+Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -502,22 +503,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-170 queued items: 2287H 51M / 95D 7H 51M<br>
+169 queued items: 2273H 32M / 94D 17H 32M<br>
 0 reserve titles are marked as high priority<br>
-20.58% of reserve items are queued<br>
+20.48% of reserve items are queued<br>
  <br>
 All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 411 titles - 4504H 49M / 187D 16H 49M<br>
-Total remaining in queue and reserve: 826 titles - 10105H 58M / 421D 1H 58M<br>
-Average completed per year: 46.4 titles - 508H 18M / 21D 4H 18M<br>
-Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.2<br>
+Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
+Total remaining in queue and reserve: 825 titles - 10091H 40M / 420D 11H 40M<br>
+Average completed per year: 46.5 titles - 509H 45M / 21D 5H 45M<br>
+Remaining years of reserve material at average yearly pace: 17.7<br>
+Remaining years of reserve material at current year pace: 9.1<br>
  <br>
-Total time to process all reports: 00:00:01.605 (1.605 seconds)<br>
-Total time including file writes: 00:00:01.606 (1.606 seconds)
+Total time to process all reports: 00:00:09.048 (9.048 seconds)<br>
+Total time including file writes: 00:00:09.048 (9.048 seconds)
 </div>
 </body>
 </html>
