--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 11/12/2021 06:00<br>
+Completed books sorted by length - 11/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-411 books<br>
+412 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -300,6 +300,7 @@ Ender 13 - Earth Unaware - 13H 58M (Completed in 2015)<br>
 The Book Thief - Markus Zusak - 13H 58M (Completed in 2019)<br>
 The Body - Bill Bryson - 14H 8M (Completed in 2020)<br>
 Ender 02 - Speaker for the Dead - 14H 14M (Completed in 2013)<br>
+The Dresden Files 09 - White Night - Jim Butcher - 14H 18M (Completed in 2021)<br>
 Bill Hodges 1 - Mr. Mercedes - Stephen King - 14H 26M (Completed in 2019)<br>
 Cosmos - Carl Sagan - 14H 31M (Completed in 2020)<br>
 Pern 9-06 - The White Dragon - 14H 39M (Completed in 2014)<br>
@@ -398,9 +399,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 139 books - 1804H 3M / 75D 4H 3M<br>
+Queue - Current Audiobooks - 138 books - 1789H 44M / 74D 13H 44M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 78 books - 727H 1M / 30D 7H 1M<br>
+Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -419,22 +420,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-170 queued items: 2287H 51M / 95D 7H 51M<br>
+169 queued items: 2273H 32M / 94D 17H 32M<br>
 0 reserve titles are marked as high priority<br>
-20.58% of reserve items are queued<br>
+20.48% of reserve items are queued<br>
  <br>
 All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 411 titles - 4504H 49M / 187D 16H 49M<br>
-Total remaining in queue and reserve: 826 titles - 10105H 58M / 421D 1H 58M<br>
-Average completed per year: 46.4 titles - 508H 18M / 21D 4H 18M<br>
-Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.2<br>
+Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
+Total remaining in queue and reserve: 825 titles - 10091H 40M / 420D 11H 40M<br>
+Average completed per year: 46.5 titles - 509H 45M / 21D 5H 45M<br>
+Remaining years of reserve material at average yearly pace: 17.7<br>
+Remaining years of reserve material at current year pace: 9.1<br>
  <br>
-Total time to process all reports: 00:00:01.605 (1.605 seconds)<br>
-Total time including file writes: 00:00:01.606 (1.606 seconds)
+Total time to process all reports: 00:00:09.048 (9.048 seconds)<br>
+Total time including file writes: 00:00:09.048 (9.048 seconds)
 </div>
 </body>
 </html>
