book and media report content update Sun 11/14/2021

--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 11/14/2021 21:00<br>
+Reserved books sorted by folder - 11/14/2021 23:15<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 138 books - 1789H 44M / 74D 13H 44M<br>
@@ -212,8 +212,8 @@ Total Comic Trades : 1<br>
 Star Wars The High Republic Edge of Balance, Vol. 1 - 4H 28M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 122 books - 760H 18M / 31D 16H 18M<br>
-Total Comic Trades : 122<br>
+Book Reserve - Comic Trades : 127 books - 785H 55M / 32D 17H 55M<br>
+Total Comic Trades : 127<br>
  <br>
 Action Comics 1000 - 4H 58M<br>
 Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
@@ -239,6 +239,7 @@ Batman The Doom That Came To Gotham - 5H 28M<br>
 Batman vol 8 - 5H 28M<br>
 Batman vol 9 - 4H 43M<br>
 Batwoman vol 1 - 5H 13M<br>
+Beta Ray Bill Argent Star - 3H 59M<br>
 Black Panther vol 1 - 4H 28M<br>
 Black Panther vol 2 - 4H 28M<br>
 Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
@@ -283,10 +284,12 @@ Justice League Darkseid War - 11H 42M<br>
 Lobo Portrait of a Bastich - 6H 28M<br>
 Lumberjanes - 4H 6M<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
+Marvel Action Captain Marvel Ghost in the Machine - 3H 44M<br>
 Marvel Infinity - 18H 25M<br>
 Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
 Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
 Mister Miracle - 9H 57M<br>
+Moon Knight Vol. 1 The Midnight Mission - 4H 28M<br>
 Once & Future Vol. 1 - 4H 58M<br>
 Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
 Pride of Baghdad - 4H 14M<br>
@@ -309,11 +312,13 @@ Spider-man-Deadpool vol 2 - 3H 44M<br>
 Spider-man-Deadpool vol 3 - 4H 14M<br>
 Spider-Verse - 20H 10M<br>
 Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
+Star Wars War of the Bounty Hunters - 4H 58M<br>
 Suicide Squad vol 4 - 4H 28M<br>
 Suicide Squad vol 5 - 6H 28M<br>
 Super Sons vol 1 - 3H 59M<br>
 Superior Spider-man Necessary Evil - 3H 36M<br>
 Superman '78 - 4H 43M<br>
+Superman Red & Blue - 8H 28M<br>
 Superman vol 3 - 4H 28M<br>
 Superman vol 4 - 5H 28M<br>
 Swamp Thing Bronze Age vol 1 - 9H 27M<br>
@@ -881,7 +886,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 122 books - 760H 18M / 31D 16H 18M<br>
+Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
@@ -891,20 +896,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 169 queued items: 2273H 32M / 94D 17H 32M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.36% of reserve items are queued<br>
  <br>
-All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1242 titles - 14636H 25M / 609D 20H 25M<br>
+Records not found in the lookup file: 1242<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 825 titles - 10091H 40M / 420D 11H 40M<br>
+Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
 Average completed per year: 46.5 titles - 509H 36M / 21D 5H 36M<br>
-Remaining years of reserve material at average yearly pace: 17.7<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:03.376 (3.376 seconds)<br>
-Total time including file writes: 00:00:03.376 (3.376 seconds)
+Total time to process all reports: 00:06:08.393 (368.393 seconds)<br>
+Total time including file writes: 00:06:08.394 (368.394 seconds)
 </div>
 </body>
 </html>
