--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 11/14/2021 21:00<br>
+Reserved books sorted by length - 11/14/2021 23:15<br>
 -----------------------------------------------------<br>
  <br>
-825 books<br>
+830 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -230,7 +230,7 @@ Artemis Fowl 5 - The Lost Colony - 8H 25M (Book Reserve - Audiobooks)<br>
 Pern 3-02 - Dragon's Kin - 8H 26M (Book Reserve - Audiobooks)<br>
 How Democracies Die - Steven Levitsky - 8H 27M (Queue - Current Audiobooks)<br>
 The Demolished Man - Alfred Bester - 8H 27M (Book Reserve - Audiobooks (Need new source))<br>
-Batman Li'l Gotham Vol. 1 - 8H 28M (Book Reserve - Comic Trades)<br>
+Superman Red & Blue - 8H 28M (Book Reserve - Comic Trades)<br>
 Extra Life - Steven Johnson - 8H 28M (Book Reserve - Audiobooks)<br>
 Themis Files 1 - Sleeping Giants - Sylvain Neuvel - 8H 31M (Book Reserve - Audiobooks)<br>
 City of Thieves - David Benioff - 8H 31M (Book Reserve - Audiobooks)<br>
@@ -757,7 +757,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 122 books - 760H 18M / 31D 16H 18M<br>
+Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
@@ -767,20 +767,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 169 queued items: 2273H 32M / 94D 17H 32M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.36% of reserve items are queued<br>
  <br>
-All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1242 titles - 14636H 25M / 609D 20H 25M<br>
+Records not found in the lookup file: 1242<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 825 titles - 10091H 40M / 420D 11H 40M<br>
+Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
 Average completed per year: 46.5 titles - 509H 36M / 21D 5H 36M<br>
-Remaining years of reserve material at average yearly pace: 17.7<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:03.376 (3.376 seconds)<br>
-Total time including file writes: 00:00:03.376 (3.376 seconds)
+Total time to process all reports: 00:06:08.393 (368.393 seconds)<br>
+Total time including file writes: 00:06:08.394 (368.394 seconds)
 </div>
 </body>
 </html>
