--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 11/14/2021 21:00<br>
+All books sorted by name - 11/14/2021 23:15<br>
 -----------------------------------------------------<br>
  <br>
-1237 books<br>
+1242 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -145,6 +145,7 @@ Berserker 3 - Berserker's Planet - 6H 27M (Book Reserve - Audiobooks)<br>
 Berserker 4 - Berserker Man - 7H 12M (Book Reserve - Audiobooks)<br>
 Berserker 8 - The Berserker Throne - 8H 6M (Book Reserve - Audiobooks)<br>
 Berserker 9 - Blue Death - 9H 16M (Book Reserve - Audiobooks)<br>
+Beta Ray Bill Argent Star - 3H 59M (Book Reserve - Comic Trades)<br>
 Beyond Order - Jordan B. Peterson - 13H 14M (Queue - Current Audiobooks)<br>
 Bezonomics - Brian Dumaine - 9H 2M (Book Reserve - Audiobooks)<br>
 Bill Hodges 1 - Mr. Mercedes - Stephen King - 14H 26M (Completed in 2019)<br>
@@ -607,6 +608,7 @@ Mars trilogy 1 - Red Mars - Kim Stanley Robinson - 23H 4M (Queue - Current Audio
 Mars trilogy 2 - Green Mars - Kim Stanley Robinson - 26H 41M (Book Reserve - Audiobooks)<br>
 Mars trilogy 3 - Blue Mars - Kim Stanley Robinson - 30H 54M (Book Reserve - Audiobooks)<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M (Book Reserve - Comic Trades)<br>
+Marvel Action Captain Marvel Ghost in the Machine - 3H 44M (Book Reserve - Comic Trades)<br>
 Marvel Comics 1000 - 4H 28M (Completed in 2021)<br>
 Marvel Infinity - 18H 25M (Book Reserve - Comic Trades)<br>
 Mary Poppins - P. L. Travers - 3H 51M (Book Reserve - Audiobooks)<br>
@@ -630,6 +632,7 @@ Moby Dick - Herman Melville - 21H 22M (Book Reserve - Audiobooks)<br>
 Mood Elevator - Berrett Koehler - 4H 33M (Book Reserve - Audiobooks)<br>
 Moon Girl and Devil Dinosaur vol 1 - 4H 14M (Completed in 2020)<br>
 Moon Knight Legacy vol 2 - 3H 29M (Completed in 2021)<br>
+Moon Knight Vol. 1 The Midnight Mission - 4H 28M (Book Reserve - Comic Trades)<br>
 Moonwalking with Einstein - Joshua Foer - 9H 34M (Completed in 2018)<br>
 More Napalm and Silly Putty - George Carlin - 2H 29M (Book Reserve - Audiobooks)<br>
 Murder on the Orient Express - Agatha Christie - 6H 38M (Book Reserve - Audiobooks)<br>
@@ -833,6 +836,7 @@ Stamped--Racism, Antiracism, and You - Jason Reynolds - Ibram X. Kendi - 4H 12M 
 Stand on Zanzibar - John Brunner - 21H 22M (Queue - Current Audiobooks)<br>
 Star Wars Skywalker Strikes vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
 Star Wars The High Republic Edge of Balance, Vol. 1 - 4H 28M (Book Reserve - Manga)<br>
+Star Wars War of the Bounty Hunters - 4H 58M (Book Reserve - Comic Trades)<br>
 Star Wars the High Republic - A Test of Courage - Justina Ireland - 4H 35M (Completed in 2021)<br>
 Star Wars the High Republic - Into the Dark - Claudia Gray - 11H 14M (Completed in 2021)<br>
 Star Wars the High Republic - Light of the Jedi - Charles Soule - 13H 38M (Completed in 2021)<br>
@@ -859,6 +863,7 @@ Super Sons vol 1 - 3H 59M (Book Reserve - Comic Trades)<br>
 Superfreakonomics - Steven D. Levitt - 7H 30M (Completed in 2021)<br>
 Superior Spider-man Necessary Evil - 3H 36M (Book Reserve - Comic Trades)<br>
 Superman '78 - 4H 43M (Book Reserve - Comic Trades)<br>
+Superman Red & Blue - 8H 28M (Book Reserve - Comic Trades)<br>
 Superman vol 3 - 4H 28M (Book Reserve - Comic Trades)<br>
 Superman vol 4 - 5H 28M (Book Reserve - Comic Trades)<br>
 Surely You're Joking, Mr. Feynman! - Richard P. Feynman - 11H 35M (Completed in 2019)<br>
@@ -1267,7 +1272,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 122 books - 760H 18M / 31D 16H 18M<br>
+Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
@@ -1277,20 +1282,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 169 queued items: 2273H 32M / 94D 17H 32M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.36% of reserve items are queued<br>
  <br>
-All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1242 titles - 14636H 25M / 609D 20H 25M<br>
+Records not found in the lookup file: 1242<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 825 titles - 10091H 40M / 420D 11H 40M<br>
+Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
 Average completed per year: 46.5 titles - 509H 36M / 21D 5H 36M<br>
-Remaining years of reserve material at average yearly pace: 17.7<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:03.376 (3.376 seconds)<br>
-Total time including file writes: 00:00:03.376 (3.376 seconds)
+Total time to process all reports: 00:06:08.393 (368.393 seconds)<br>
+Total time including file writes: 00:06:08.394 (368.394 seconds)
 </div>
 </body>
 </html>
