--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 11/14/2021 21:00<br>
+Reserved books sorted by name - 11/14/2021 23:15<br>
 -----------------------------------------------------<br>
  <br>
-825 books<br>
+830 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -101,6 +101,7 @@ Berserker 3 - Berserker's Planet - 6H 27M (Book Reserve - Audiobooks)<br>
 Berserker 4 - Berserker Man - 7H 12M (Book Reserve - Audiobooks)<br>
 Berserker 8 - The Berserker Throne - 8H 6M (Book Reserve - Audiobooks)<br>
 Berserker 9 - Blue Death - 9H 16M (Book Reserve - Audiobooks)<br>
+Beta Ray Bill Argent Star - 3H 59M (Book Reserve - Comic Trades)<br>
 Beyond Order - Jordan B. Peterson - 13H 14M (Queue - Current Audiobooks)<br>
 Bezonomics - Brian Dumaine - 9H 2M (Book Reserve - Audiobooks)<br>
 Bill Hodges 2 - Finders Keepers - Stephen King - 13H 9M (Queue - Current Audiobooks)<br>
@@ -381,6 +382,7 @@ Mars trilogy 1 - Red Mars - Kim Stanley Robinson - 23H 4M (Queue - Current Audio
 Mars trilogy 2 - Green Mars - Kim Stanley Robinson - 26H 41M (Book Reserve - Audiobooks)<br>
 Mars trilogy 3 - Blue Mars - Kim Stanley Robinson - 30H 54M (Book Reserve - Audiobooks)<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M (Book Reserve - Comic Trades)<br>
+Marvel Action Captain Marvel Ghost in the Machine - 3H 44M (Book Reserve - Comic Trades)<br>
 Marvel Infinity - 18H 25M (Book Reserve - Comic Trades)<br>
 Mary Poppins - P. L. Travers - 3H 51M (Book Reserve - Audiobooks)<br>
 Master & Apprentice  (Star Wars) - Claudia Gray - 11H 45M (Book Reserve - Audiobooks)<br>
@@ -393,6 +395,7 @@ Mirror Dance - Lois McMaster Bujold - 18H 11M (Book Reserve - Audiobooks)<br>
 Mister Miracle - 9H 57M (Book Reserve - Comic Trades)<br>
 Moby Dick - Herman Melville - 21H 22M (Book Reserve - Audiobooks)<br>
 Mood Elevator - Berrett Koehler - 4H 33M (Book Reserve - Audiobooks)<br>
+Moon Knight Vol. 1 The Midnight Mission - 4H 28M (Book Reserve - Comic Trades)<br>
 More Napalm and Silly Putty - George Carlin - 2H 29M (Book Reserve - Audiobooks)<br>
 Murder on the Orient Express - Agatha Christie - 6H 38M (Book Reserve - Audiobooks)<br>
 Murderbot Diaries 5 - Network Effect - Martha Wells - 12H 51M (Queue - Current Audiobooks)<br>
@@ -531,6 +534,7 @@ Stamped from the Beginning - Ibram X. Kendi - 19H 13M (Book Reserve - Audiobooks
 Stand on Zanzibar - John Brunner - 21H 22M (Queue - Current Audiobooks)<br>
 Star Wars Skywalker Strikes vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
 Star Wars The High Republic Edge of Balance, Vol. 1 - 4H 28M (Book Reserve - Manga)<br>
+Star Wars War of the Bounty Hunters - 4H 58M (Book Reserve - Comic Trades)<br>
 Star Wars the High Republic - The Rising Storm - Cavan Scott - 15H 36M (Queue - Current Audiobooks)<br>
 Stardust - Neil Gaiman - 6H 25M (Book Reserve - Audiobooks)<br>
 Still Standing - Governor Larry Hogan - 10H 21M (Book Reserve - Audiobooks)<br>
@@ -540,6 +544,7 @@ Suicide Squad vol 5 - 6H 28M (Book Reserve - Comic Trades)<br>
 Super Sons vol 1 - 3H 59M (Book Reserve - Comic Trades)<br>
 Superior Spider-man Necessary Evil - 3H 36M (Book Reserve - Comic Trades)<br>
 Superman '78 - 4H 43M (Book Reserve - Comic Trades)<br>
+Superman Red & Blue - 8H 28M (Book Reserve - Comic Trades)<br>
 Superman vol 3 - 4H 28M (Book Reserve - Comic Trades)<br>
 Superman vol 4 - 5H 28M (Book Reserve - Comic Trades)<br>
 Surviving Autocracy - Masha Gessen - 5H 46M (Book Reserve - Audiobooks)<br>
@@ -855,7 +860,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 122 books - 760H 18M / 31D 16H 18M<br>
+Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
  <br>
@@ -865,20 +870,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 169 queued items: 2273H 32M / 94D 17H 32M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.36% of reserve items are queued<br>
  <br>
-All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1242 titles - 14636H 25M / 609D 20H 25M<br>
+Records not found in the lookup file: 1242<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 825 titles - 10091H 40M / 420D 11H 40M<br>
+Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
 Average completed per year: 46.5 titles - 509H 36M / 21D 5H 36M<br>
-Remaining years of reserve material at average yearly pace: 17.7<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:03.376 (3.376 seconds)<br>
-Total time including file writes: 00:00:03.376 (3.376 seconds)
+Total time to process all reports: 00:06:08.393 (368.393 seconds)<br>
+Total time including file writes: 00:06:08.394 (368.394 seconds)
 </div>
 </body>
 </html>
