book and media report content update Tue 11/16/2021

--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 11/15/2021 06:00<br>
+Completed books sorted by length - 11/16/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 412 books<br>
@@ -430,12 +430,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
 Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
-Average completed per year: 46.4 titles - 509H 26M / 21D 5H 26M<br>
+Average completed per year: 46.4 titles - 509H 17M / 21D 5H 17M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:02.235 (2.235 seconds)<br>
-Total time including file writes: 00:00:02.235 (2.235 seconds)
+Total time to process all reports: 00:00:01..75 (1.75 seconds)<br>
+Total time including file writes: 00:00:01..75 (1.75 seconds)
 </div>
 </body>
 </html>
