--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/15/2021 06:00<br>
+Completed books sorted by folder - 11/16/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 79 books - 741H 20M / 30D 21H 20M<br>
 Total Comic Trades : 31<br>
 Average book length : 9H 23M<br>
-Hours read per week : 16H 16M<br>
-On pace to complete 90 books (848H 48M / 35D 8H 48M) by the end of 2021<br>
+Hours read per week : 16H 13M<br>
+On pace to complete 90 books (846H 9M / 35D 6H 9M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -513,12 +513,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
 Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
-Average completed per year: 46.4 titles - 509H 26M / 21D 5H 26M<br>
+Average completed per year: 46.4 titles - 509H 17M / 21D 5H 17M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:02.235 (2.235 seconds)<br>
-Total time including file writes: 00:00:02.235 (2.235 seconds)
+Total time to process all reports: 00:00:01..75 (1.75 seconds)<br>
+Total time including file writes: 00:00:01..75 (1.75 seconds)
 </div>
 </body>
 </html>
