--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 11/19/2021 06:00<br>
+Reserved books sorted by folder - 11/19/2021 11:18<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 139 books - 1803H 22M / 75D 3H 22M<br>
@@ -213,8 +213,8 @@ Total Comic Trades : 1<br>
 Star Wars The High Republic Edge of Balance, Vol. 1 - 4H 28M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 127 books - 785H 55M / 32D 17H 55M<br>
-Total Comic Trades : 127<br>
+Book Reserve - Comic Trades : 128 books - 788H 54M / 32D 20H 54M<br>
+Total Comic Trades : 128<br>
  <br>
 Action Comics 1000 - 4H 58M<br>
 Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
@@ -263,6 +263,7 @@ Death of Doctor Strange - 4H 14M<br>
 Despicable Deadpool vol 2 - 3H 29M<br>
 Despicable Deadpool vol 3 - 3H 29M<br>
 Detective Comics 1000 - 5H 28M<br>
+East of West Volume 1 The Promise - 2H 59M<br>
 Edge of Spider-geddon - 3H 44M<br>
 Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
 Fantastic Four vol 1 - 4H 28M<br>
@@ -888,7 +889,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
+Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 495 books - 6510H 32M / 271D 6H 32M<br>
  <br>
@@ -898,20 +899,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 170 queued items: 2287H 10M / 95D 7H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.43% of reserve items are queued<br>
+20.41% of reserve items are queued<br>
  <br>
-All books included in this report: 1244 titles - 14654H 34M / 610D 14H 34M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1245 titles - 14657H 33M / 610D 17H 33M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 832 titles - 10135H 26M / 422D 7H 26M<br>
+Total remaining in queue and reserve: 833 titles - 10138H 25M / 422D 10H 25M<br>
 Average completed per year: 46.4 titles - 508H 49M / 21D 4H 49M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.3<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01.742 (1.742 seconds)<br>
-Total time including file writes: 00:00:01.743 (1.743 seconds)
+Total time to process all reports: 00:00:03.234 (3.234 seconds)<br>
+Total time including file writes: 00:00:03.234 (3.234 seconds)
 </div>
 </body>
 </html>
