--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 11/19/2021 06:00<br>
+Reserved books sorted by length - 11/19/2021 11:18<br>
 -----------------------------------------------------<br>
  <br>
-832 books<br>
+833 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -25,7 +25,7 @@ HTTYD 06 - A Hero's Guide to Deadly Dragons  - Cressida Cowell - 2H 41M (Book Re
 The Meaning of It All - Richard P. Feynman - 2H 51M (Queue - Current Audiobooks)<br>
 HTTYD 02 - How to Be a Pirate  - Cressida Cowell - 2H 55M (Book Reserve - Audiobooks)<br>
 The Annals Of Kings And Rulers - J.R.R. Tolkien - 2H 56M (Book Reserve - Audiobooks)<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M (Book Reserve - Comic Trades)<br>
+East of West Volume 1 The Promise - 2H 59M (Book Reserve - Comic Trades)<br>
 A Christmas Carol - Charles Dickens - 2H 59M (Book Reserve - Audiobooks)<br>
 Strong Voices - Fifteen American Speeches Worth Knowing - Tonya Bolden - 3H 5M (Queue - Current Audiobooks)<br>
 Of Mice and Men - John Steinbeck - 3H 12M (Book Reserve - Audiobooks)<br>
@@ -759,7 +759,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
+Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 495 books - 6510H 32M / 271D 6H 32M<br>
  <br>
@@ -769,20 +769,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 170 queued items: 2287H 10M / 95D 7H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.43% of reserve items are queued<br>
+20.41% of reserve items are queued<br>
  <br>
-All books included in this report: 1244 titles - 14654H 34M / 610D 14H 34M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1245 titles - 14657H 33M / 610D 17H 33M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 832 titles - 10135H 26M / 422D 7H 26M<br>
+Total remaining in queue and reserve: 833 titles - 10138H 25M / 422D 10H 25M<br>
 Average completed per year: 46.4 titles - 508H 49M / 21D 4H 49M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.3<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01.742 (1.742 seconds)<br>
-Total time including file writes: 00:00:01.743 (1.743 seconds)
+Total time to process all reports: 00:00:03.234 (3.234 seconds)<br>
+Total time including file writes: 00:00:03.234 (3.234 seconds)
 </div>
 </body>
 </html>
