book and media report content update Sat 11/20/2021

--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 11/19/2021 11:18<br>
+Reserved books sorted by folder - 11/20/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 139 books - 1803H 22M / 75D 3H 22M<br>
+Queue - Current Audiobooks : 140 books - 1822H 24M / 75D 22H 24M<br>
  <br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
 13 Things Mentally Strong People Don't Do - Amy Morin - 6H 37M<br>
@@ -95,6 +95,7 @@ Strong Voices - Fifteen American Speeches Worth Knowing - Tonya Bolden - 3H 5M<b
 Talking Across the Divide - Justin Lee - 6H 4M<br>
 Teixcalaan 1 - A Memory Called Empire - Arkady Martine - 15H 41M<br>
 Thank You for Arguing - Jay Heinrichs - 14H 38M<br>
+The 1619 Project - Nikole Hannah-Jones - 19H 2M<br>
 The Anthropocene Reviewed - John Green - 10H 6M<br>
 The Big Picture - On the Origins of Life, Meaning, and the Universe Itself - Sean Carroll - 17H 27M<br>
 The Call of the Wild - Jack London - 3H 20M<br>
@@ -374,7 +375,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 495 books - 6510H 32M / 271D 6H 32M<br>
+Book Reserve - Audiobooks : 496 books - 6533H 52M / 272D 5H 52M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 112263 - Stephen King - 30H 46M<br>
@@ -825,6 +826,7 @@ Thrawn 2 - Thrawn Alliances - Timothy Zahn - 13H 25M<br>
 Thrawn 3 - Thrawn Treason - Timothy Zahn - 13H 16M<br>
 Thrawn Ascendancy 1 - Chaos Rising - Timothy Zahn - 15H 9M<br>
 Thrawn Ascendancy 2 - Greater Good - Timothy Zahn - 16H 22M<br>
+Thrawn Ascendancy 3 -  Lesser Evil - Timothy Zahn - 23H 19M<br>
 Thriving with Social Anxiety - Hattie C. Cooper - 5H 52M<br>
 Time Enough For Love - Robert A Heinlein - 24H 55M<br>
 Time Odyssey 1 - Time's Eye - Arthur C. Clarke, Stephen Baxter - 11H 40M<br>
@@ -876,7 +878,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 139 books - 1803H 22M / 75D 3H 22M<br>
+Queue - Current Audiobooks - 140 books - 1822H 24M / 75D 22H 24M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -891,28 +893,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 495 books - 6510H 32M / 271D 6H 32M<br>
+Book Reserve - Audiobooks - 496 books - 6533H 52M / 272D 5H 52M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-170 queued items: 2287H 10M / 95D 7H 10M<br>
+171 queued items: 2306H 12M / 96D 2H 12M<br>
 0 reserve titles are marked as high priority<br>
-20.41% of reserve items are queued<br>
+20.48% of reserve items are queued<br>
  <br>
-All books included in this report: 1245 titles - 14657H 33M / 610D 17H 33M<br>
-Records not found in the lookup file: 1<br>
+All books included in this report: 1247 titles - 14699H 55M / 612D 11H 55M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 833 titles - 10138H 25M / 422D 10H 25M<br>
-Average completed per year: 46.4 titles - 508H 49M / 21D 4H 49M<br>
+Total remaining in queue and reserve: 835 titles - 10180H 47M / 424D 4H 47M<br>
+Average completed per year: 46.4 titles - 508H 39M / 21D 4H 39M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:03.234 (3.234 seconds)<br>
-Total time including file writes: 00:00:03.234 (3.234 seconds)
+Total time to process all reports: 00:00:03.188 (3.188 seconds)<br>
+Total time including file writes: 00:00:03.188 (3.188 seconds)
 </div>
 </body>
 </html>
