--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 11/19/2021 11:18<br>
+Reserved books sorted by length - 11/20/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-833 books<br>
+835 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -617,6 +617,7 @@ NeuroTribes - Steve Silberman - 18H 51M (Book Reserve - Audiobooks)<br>
 A Civil Campaign - Lois McMaster Bujold - 18H 53M (Book Reserve - Audiobooks)<br>
 The Dresden Files 14 - Cold Days - Jim Butcher - 18H 53M (Book Reserve - Audiobooks)<br>
 HP 6 - Harry Potter and the Half-Blood Prince - J.K. Rowling - 19H 1M (Queue - Current Audiobooks)<br>
+The 1619 Project - Nikole Hannah-Jones - 19H 2M (Queue - Current Audiobooks)<br>
 Poppy War 1 - The Poppy War - R. F. Kuang - 19H 2M (Book Reserve - Audiobooks)<br>
 The Institute - Stephen King - 19H 4M (Book Reserve - Audiobooks)<br>
 Red Rising 2 - Golden Son - Pierce Brown - 19H 8M (Book Reserve - Audiobooks)<br>
@@ -670,6 +671,7 @@ New York 2140 - Kim Stanley Robinson - 22H 41M (Book Reserve - Audiobooks)<br>
 Remembrance of Earth's Past 2 - The Dark Forest - Cixin Liu - 22H 43M (Queue - Current Audiobooks)<br>
 Pharma - Gerald Posner - 23H 2M (Book Reserve - Audiobooks)<br>
 Mars trilogy 1 - Red Mars - Kim Stanley Robinson - 23H 4M (Queue - Current Audiobooks)<br>
+Thrawn Ascendancy 3 -  Lesser Evil - Timothy Zahn - 23H 19M (Book Reserve - Audiobooks)<br>
 The Wheel of Time 08 - The Path of Daggers - 23H 31M (Book Reserve - Audiobooks)<br>
 Lunar Chronicles 4 - Winter - Marissa Meyer - 23H 37M (Book Reserve - Audiobooks)<br>
 Oxford 2 - All Clear - Connie Willis - 23H 39M (Book Reserve - Audiobooks)<br>
@@ -746,7 +748,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 139 books - 1803H 22M / 75D 3H 22M<br>
+Queue - Current Audiobooks - 140 books - 1822H 24M / 75D 22H 24M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -761,28 +763,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 495 books - 6510H 32M / 271D 6H 32M<br>
+Book Reserve - Audiobooks - 496 books - 6533H 52M / 272D 5H 52M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-170 queued items: 2287H 10M / 95D 7H 10M<br>
+171 queued items: 2306H 12M / 96D 2H 12M<br>
 0 reserve titles are marked as high priority<br>
-20.41% of reserve items are queued<br>
+20.48% of reserve items are queued<br>
  <br>
-All books included in this report: 1245 titles - 14657H 33M / 610D 17H 33M<br>
-Records not found in the lookup file: 1<br>
+All books included in this report: 1247 titles - 14699H 55M / 612D 11H 55M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 833 titles - 10138H 25M / 422D 10H 25M<br>
-Average completed per year: 46.4 titles - 508H 49M / 21D 4H 49M<br>
+Total remaining in queue and reserve: 835 titles - 10180H 47M / 424D 4H 47M<br>
+Average completed per year: 46.4 titles - 508H 39M / 21D 4H 39M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:03.234 (3.234 seconds)<br>
-Total time including file writes: 00:00:03.234 (3.234 seconds)
+Total time to process all reports: 00:00:03.188 (3.188 seconds)<br>
+Total time including file writes: 00:00:03.188 (3.188 seconds)
 </div>
 </body>
 </html>
