book and media report content update Tue 11/23/2021

--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 11/22/2021 06:00<br>
+Reserved books sorted by name - 11/23/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-835 books<br>
+836 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -672,6 +672,7 @@ The Meaning of It All - Richard P. Feynman - 2H 51M (Queue - Current Audiobooks)
 The Meditations - Marcus Aurelius - 4H 25M (Queue - Current Audiobooks)<br>
 The Millionaire Next Door - Thomas J. Stanley - 8H 52M (Book Reserve - Audiobooks)<br>
 The Mind's Eye - Oliver Sacks - 8H 47M (Queue - Current Audiobooks)<br>
+The Miraculous Journey of Edward Tulane - Kate DiCamillo - 1H 56M (Book Reserve - Audiobooks)<br>
 The Mist - Stephen King - 5H 21M (Book Reserve - Audiobooks)<br>
 The Moment of Lift - Melinda Gates - 7H 58M (Book Reserve - Audiobooks)<br>
 The Moon is a Harsh Mistress - Robert A Heinlein - 14H 13M (Book Reserve - Audiobooks)<br>
@@ -867,7 +868,7 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 496 books - 6533H 52M / 272D 5H 52M<br>
+Book Reserve - Audiobooks - 497 books - 6535H 48M / 272D 7H 48M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -875,20 +876,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2306H 12M / 96D 2H 12M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.45% of reserve items are queued<br>
  <br>
-All books included in this report: 1247 titles - 14699H 55M / 612D 11H 55M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 835 titles - 10180H 47M / 424D 4H 47M<br>
-Average completed per year: 46.3 titles - 508H 21M / 21D 4H 21M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
+Total remaining in queue and reserve: 836 titles - 10182H 43M / 424D 6H 43M<br>
+Average completed per year: 46.3 titles - 508H 11M / 21D 4H 11M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:01.699 (1.699 seconds)<br>
-Total time including file writes: 00:00:01.699 (1.699 seconds)
+Total time to process all reports: 00:00:02.159 (2.159 seconds)<br>
+Total time including file writes: 00:00:02..16 (2.16 seconds)
 </div>
 </body>
 </html>
